fix(general): fixed adaptive white space & slider

--- a/styles/_pricing.scss
+++ b/styles/_pricing.scss
@@ -248,8 +248,8 @@
         }
 
         &__title {
-          min-width: 8rem;
-          max-width: 8rem;
+          min-width: 7rem;
+          max-width: 7rem;
         }
       }
     }
